tests/valid/02_vars_simple.patito
programa varsSimple;
vars
    x : entero;
inicio
{
}
fin
