tests/invalid/01_falta_pcoma.patito
programa faltaPcoma;
vars
    x : entero
inicio
{
}
fin
